// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifi-checkout-core should display error state correctly 1`] = `<checkout-core />`;

exports[`justifi-checkout-core should display loading state correctly 1`] = `
<justifi-checkout-core class="body" style="display: block;">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12" part="checkout-summary">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Summary
        </h2>
        <section>
          <div>
            <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 24px;"></div>
          </div>
          <div class="visually-hidden">
            <div part="text color font-family"></div>
            <div>
              <span part="text color font-family">
                Total
              </span>
              <span part="text color font-family">
                $0.00
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12 mt-4">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold header-3 lh-lg" part="heading-3 heading text color font-family">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div>
              <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 300px;"></div>
            </div>
            <div class="visually-hidden">
              <justifi-payment-method-options show-ach="" show-bnpl="" show-card="" show-saved-payment-methods=""></justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary" disabled="" isloading="" part="button-primary button text color font-family button-loading" type="submit" variant="primary" style="width: 100%;">
            <div class="spinner-border spinner-border-sm" part="button-spinner" role="status">
              <span class="visually-hidden">
                Loading...
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;

exports[`justifi-checkout-core should render the full billing form by default 1`] = `
<justifi-checkout-core class="body" style="display: block;">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12" part="checkout-summary">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Summary
        </h2>
        <section>
          <div>
            <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 24px;"></div>
          </div>
          <div class="visually-hidden">
            <div part="text color font-family"></div>
            <div>
              <span part="text color font-family">
                Total
              </span>
              <span part="text color font-family">
                $0.00
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12 mt-4">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold header-3 lh-lg" part="heading-3 heading text color font-family">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div>
              <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 300px;"></div>
            </div>
            <div class="visually-hidden">
              <justifi-payment-method-options show-ach="" show-bnpl="" show-card="" show-saved-payment-methods="">
                <div>
                  <div class="p-3 radio-list-item" part="radio-list-item text color font-family">
                    <form-control-radio checked="" label="New credit or debit card" name="paymentMethodType" value="card"></form-control-radio>
                  </div>
                  <div class="p-3 radio-list-item" part="radio-list-item text color font-family">
                    <form-control-radio label="New bank account" name="paymentMethodType" value="bankAccount"></form-control-radio>
                  </div>
                  <justifi-sezzle-payment-method></justifi-sezzle-payment-method>
                  <justifi-saved-payment-methods exportparts="radio-list-item,text,color,font-family"></justifi-saved-payment-methods>
                </div>
              </justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary" disabled="" isloading="" part="button-primary button text color font-family button-loading" type="submit" variant="primary" style="width: 100%;">
            <div class="spinner-border spinner-border-sm" part="button-spinner" role="status">
              <span class="visually-hidden">
                Loading...
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;

exports[`justifi-checkout-core should render the postal form if hideCardBillingForm prop is true 1`] = `
<justifi-checkout-core class="body" style="display: block;">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12" part="checkout-summary">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Summary
        </h2>
        <section>
          <div>
            <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 24px;"></div>
          </div>
          <div class="visually-hidden">
            <div part="text color font-family"></div>
            <div>
              <span part="text color font-family">
                Total
              </span>
              <span part="text color font-family">
                $0.00
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12 mt-4">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold header-3 lh-lg" part="heading-3 heading text color font-family">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div>
              <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 300px;"></div>
            </div>
            <div class="visually-hidden">
              <justifi-payment-method-options show-ach="" show-bnpl="" show-card="" show-saved-payment-methods="">
                <div>
                  <div class="p-3 radio-list-item" part="radio-list-item text color font-family">
                    <form-control-radio checked="" label="New credit or debit card" name="paymentMethodType" value="card"></form-control-radio>
                  </div>
                  <div class="p-3 radio-list-item" part="radio-list-item text color font-family">
                    <form-control-radio label="New bank account" name="paymentMethodType" value="bankAccount"></form-control-radio>
                  </div>
                  <justifi-sezzle-payment-method></justifi-sezzle-payment-method>
                  <justifi-saved-payment-methods exportparts="radio-list-item,text,color,font-family"></justifi-saved-payment-methods>
                </div>
              </justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary" disabled="" isloading="" part="button-primary button text color font-family button-loading" type="submit" variant="primary" style="width: 100%;">
            <div class="spinner-border spinner-border-sm" part="button-spinner" role="status">
              <span class="visually-hidden">
                Loading...
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;

exports[`justifi-checkout-core should set checkout correctly to state 1`] = `
<justifi-checkout-core class="body" style="display: block;">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12" part="checkout-summary">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Summary
        </h2>
        <section>
          <div class="visually-hidden">
            <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 24px;"></div>
          </div>
          <div>
            <div part="text color font-family">
              One Chocolate Donut
            </div>
            <div>
              <span part="text color font-family">
                Total
              </span>
              <span part="text color font-family">
                $17.99
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12 mt-4">
        <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold header-3 lh-lg" part="heading-3 heading text color font-family">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div class="visually-hidden">
              <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="height: 300px;"></div>
            </div>
            <div>
              <justifi-payment-method-options account-id="acc_5Et9iXrSSAZR2KSouQGAWi" paymentamount="1799" paymentmethodgroupid="pmg_12TH1LBNpsrdEXxWyxFjQv" show-ach="" show-bnpl="" show-card="" show-saved-payment-methods=""></justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary" part="button-primary button text color font-family " type="submit" variant="primary" style="width: 100%;">
            Pay
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;
